--- a/main.html
+++ b/main.html
@@ -6,8 +6,62 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style = "background-color : gainsboro">
 	<!-- the entire body must be written by student -->
+	<div class = "imageContainer" >
+	<img src = "https://th.bing.com/th/id/OIP.LsvZAXhokCtie-
+		bnW9h9FwHaEU?pid=ImgDet&rs=1" width = 300px height = 150px/>
+		</div>
+	<table border = "1 px">
+		<thead>
+			<tr>
+				<td width = "200px">
+					<img src = "https://wallpapercave.com/wp/wp4081309.jpg" width = 100/>
+				</td>
+				<td width = "600px">
+				Unit # 5 floor plans<br>
+					<ol>
+						<li>Kitchen</li>
+						<li>Bathroom</li>
+						<li>Using slabs</li>
+						<li>Geogian Home</li>
+						<li>Sketching Assignment 5</li>
+					</ol>
+		
+				</td>
+				<td width = "200px">
+					<img src = "https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76Nc-QHaEo?pid=ImgDet&rs=1" width = 100/>
+				</td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>
+					<img src = "https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76Nc-QHaEo?pid=ImgDet&rs=1" width = 100 />
+				</td>
+				<td style = "align : center;">
+					Objective<br>
+					https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76
+				</td>
+				<td>
+					<img src = "https://th.bing.com/th/id/OIP.
+						ADOznDMtv0xDlVAi76Nc-QHaEo?pid=ImgDet&rs=1" width = 100/>
+				</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
